# pypauline

./: .gitignore  .gitmodules  README.md  event_store.py  events.py  pauline.py  pyhxcfe.py  pyproject.toml  test_events.py
event/: event_store.py  events.py
src/hhfloppy/: conv_atari8bit.py  pauline.py  pyhxcfe.py  test_events.py  util.py
src/hhfloppy/event/: __init__.py  datatypes.py  event_store.py  events.py
src/hhfloppy/python_imd/: .gitignore  LICENSE  README.md  imd.py
templates/: summary.html
