[project]
name = "hhfloppy"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncssh>=2.19.0",
    "click>=8.0.0",
    "jinja2>=3.1.0",
    "msgspec>=0.19.0",
    "requests-oauthlib>=2.0.0",
    "tqdm>=4.67.1",
    "websockets>=14.2",
]
